# Road_Lane_segmentation

./: .gitignore  Autosnomous_steering_wheel_with_Seg+lanedetection.ipynb  README.md  main.py  pyproject.toml
jupyter/: EDA.ipynb
src/: __init__.py
src/data/: __init__.py  dataset.py  transforms.py
src/utils/: __init__.py  config.py  env.py  log.py  seed.py  wandbs.py
